test/libyul/yulSyntaxTests/opcode_for_function_args_1.yul
{
	function f(mload) {}
}
// ----
// ParserError 5568: (14-19): Cannot use builtin function name "mload" as identifier name.
